# runtasktic

./: Cargo.toml  README.md  _config.yml
.github/workflows/: release.yml  rust.yml
examples/resources/: concurrency.yml  notification.yml
src/: lib.rs  main.rs
src/commands/: completion.rs  dot.rs  exec.rs  mod.rs  run.rs  update.rs
src/config/: de.rs  mod.rs  reader.rs  task.rs  yaml_trait.rs
src/fst/: dot.rs  iter.rs  mod.rs
src/notification/: discord.rs  mail.rs  mod.rs  print.rs  slack.rs
src/utils/traits/: command_config.rs  mod.rs  wait_schedule.rs
tests/: config.rs
tests/resources/: concurrency.yml  notification.yml  on_failure.yml  sample.yml
