[package]
name = "runtasktic"
version = "0.5.1"
authors = ["Jones Magloire @Joxit"]
description = "Command-line task management tool for execution of regular long sequential or parallel tasks."
edition = "2018"
license = "MIT"
repository = "https://github.com/Joxit/runtasktic"
homepage = "https://github.com/Joxit/runtasktic"
documentation = "https://docs.rs/runtasktic/"
readme = "README.md"
keywords = ["cli", "shell", "command", "task"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "^0.3"
yaml-rust = "^0.4"
linked-hash-map = "^0.5"
libc = "^0.2"
attohttpc = "^0.26"
openssl = { version = "^0.10", features = ["vendored"] }
json = "^0.12"
hostname = "^0.3"
regex = "^1.3"
chrono = "^0.4"
